# clipshare

./: .release-please-manifest.json  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  release-please-config.json
.github/workflows/: release.yml
daemon/: CHANGELOG.md  Cargo.toml  build.rs  pixi.toml
daemon/src/: api.rs  config.rs  discovery.rs  main.rs
daemon/src/clipboard/: mod.rs  wayland.rs  x11.rs
daemon/stubs/macos/: libobjc.tbd
daemon/stubs/macos/AppKit.framework/: AppKit.tbd
daemon/stubs/macos/CoreFoundation.framework/: CoreFoundation.tbd
daemon/stubs/macos/CoreGraphics.framework/: CoreGraphics.tbd
daemon/stubs/macos/Foundation.framework/: Foundation.tbd
scripts/: build_release.py
src/clipshare/: __main__.py  cert.py  config.py  discovery.py  server.py  storage.py
src/clipshare/static/: index.html
