[package]
name = "clipshare-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
env_logger = "0.11"
hostname = "0.4"
log = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
arboard = { version = "3", features = ["wayland-data-control"] }
png = "0.17"
ureq = "2"
